--- a/a-markov-model-for.html
+++ b/a-markov-model-for.html
@@ -147,7 +147,7 @@
                 <!-- FOOTER -->
                 <div class="row">
                     <div class="col-md-12 footer">
-                        DiaGame Project page is powered by <a href="https://github.com/sunnyg1210/material-knowledge-base">material-knowledge-base</a>, a MIT Licensed Open-source project proudly hosted by <a href="github.com">Github</a>
+                        DiaGame Project page is based on <a href="https://github.com/sunnyg1210/material-knowledge-base">material-knowledge-base</a> template, a MIT Licensed Open-source project proudly hosted by <a href="github.com">Github</a>
                     </div>
                 </div>
             </div>
