--- a/faqs.html
+++ b/faqs.html
@@ -281,11 +281,173 @@
                                                 </div>
                                             </div>
                                             <div class="card">
+                                                <div class="card-header" id="sw-headingFive">
+                                                    <h5 class="mb-0">
+                                                        <span class="badge badge-pill badge-primary">Smartwatch</span>
+                                                        <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#sw-collapseFive" aria-expanded="false" aria-controls="sw-collapseFive">
+                                                            How to start the watch (battery can run out or accidentally turned off)?
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="sw-collapseFive" class="collapse" aria-labelledby="sw-headingFive" data-parent="#accordion">
+                                                    <div class="card-body">
+                                                        <div class="card-text">
+                                                            <p>TODO</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-header" id="em-headingOne">
+                                                    <h5 class="mb-0">
+                                                        <span class="badge badge-pill badge-success">MijnEetMeter</span>
+                                                        <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#em-collapseOne" aria-expanded="false" aria-controls="em-collapseOne">
+                                                            How can I log food and activity (with time stamps) in Eetmeter?
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="em-collapseOne" class="collapse" aria-labelledby="em-headingOne" data-parent="#accordion">
+                                                    <div class="card-body">
+                                                        <div class="card-text">
+                                                            <p>TODO</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-header" id="em-headingTwo">
+                                                    <h5 class="mb-0">
+                                                        <span class="badge badge-pill badge-success">MijnEetMeter</span>
+                                                        <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#em-collapseTwo" aria-expanded="false" aria-controls="em-collapseTwo">
+                                                            My product is not in the MijnEetmeter app, what should I do?
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="em-collapseTwo" class="collapse" aria-labelledby="em-headingTwo" data-parent="#accordion">
+                                                    <div class="card-body">
+                                                        <div class="card-text">
+                                                            <p>
+                                                                Hopefully the app has all food usually used by all participants.
+                                                                <br>
+                                                                Unfortunately, we cannot guarantee that, and in such cases make sure to select the most similar existing entry.
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-header" id="em-headingThree">
+                                                    <h5 class="mb-0">
+                                                        <span class="badge badge-pill badge-success">MijnEetMeter</span>
+                                                        <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#em-collapseThree" aria-expanded="false" aria-controls="em-collapseThree">
+                                                            How to install MijnEetmeter and log in (if the app was removed accidentally)?
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="em-collapseThree" class="collapse" aria-labelledby="em-headingThree" data-parent="#accordion">
+                                                    <div class="card-body">
+                                                        <div class="card-text">
+                                                            <p>TODO</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-header" id="fsl-headingOne">
+                                                    <h5 class="mb-0">
+                                                        <span class="badge badge-pill badge-warning">FreestyleLibre</span>
+                                                        <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#fsl-collapseOne" aria-expanded="false" aria-controls="fsl-collapseOne">
+                                                            The CGM sensor hurts or irritates the skin (only adverse effect), what should I do?
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="fsl-collapseOne" class="collapse" aria-labelledby="fsl-headingOne" data-parent="#accordion">
+                                                    <div class="card-body">
+                                                        <div class="card-text">
+                                                            <p>TODO</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-header" id="sw-fsl-headingOne">
+                                                    <h5 class="mb-0">
+                                                        <span class="badge badge-pill badge-warning">FreestyleLibre</span>
+                                                        <span class="badge badge-pill badge-primary">Smartwatch</span>
+                                                        <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#sw-fsl-collapseOne" aria-expanded="false" aria-controls="sw-fsl-collapseOne">
+                                                            Can I shower/bath/swim with the FreeStyle Libre and the smartwatch?
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="sw-fsl-collapseOne" class="collapse" aria-labelledby="sw-fsl-headingOne" data-parent="#accordion">
+                                                    <div class="card-body">
+                                                        <div class="card-text">
+                                                            <p>TODO</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-header" id="gen-headingFour">
+                                                    <h5 class="mb-0">
+                                                        <span class="badge badge-pill badge-info">General</span>
+                                                        <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#gen-collapseFour" aria-expanded="false" aria-controls="gen-collapseFour">
+                                                            What to do if I filled in the wrong insulin/mood/activity/food?
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="gen-collapseFour" class="collapse" aria-labelledby="gen-headingFour" data-parent="#accordion">
+                                                    <div class="card-body">
+                                                        <div class="card-text">
+                                                            <p>TODO</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-header" id="gen-headingTwo">
+                                                    <h5 class="mb-0">
+                                                        <span class="badge badge-pill badge-info">General</span>
+                                                        <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#gen-collapseTwo" aria-expanded="false" aria-controls="gen-collapseTwo">
+                                                            Something seems to be broken, what should I do?
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="gen-collapseTwo" class="collapse" aria-labelledby="gen-headingTwo" data-parent="#accordion">
+                                                    <div class="card-body">
+                                                        <div class="card-text">
+                                                            <p>TODO</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-header" id="gen-headingThree">
+                                                    <h5 class="mb-0">
+                                                        <span class="badge badge-pill badge-info">General</span>
+                                                        <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#gen-collapseThree" aria-expanded="false" aria-controls="gen-collapseThree">
+                                                            What can I not do?
+                                                        </button>
+                                                    </h5>
+                                                </div>
+                                                <div id="gen-collapseThree" class="collapse" aria-labelledby="gen-headingThree" data-parent="#accordion">
+                                                    <div class="card-body">
+                                                        <div class="card-text">
+                                                            <p>
+                                                                The ideal scenario is each participant to stick to the usual daily routines/planning.
+                                                                <br>
+                                                                If any doubt or questions comes to mind, please contact the DiaGame members to make sure your routines suit the experiment.
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
                                                 <div class="card-header" id="headingSix">
                                                     <h5 class="mb-0">
                                                         <span class="badge badge-pill badge-info">General</span>
                                                         <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                                            How to contact the staff able to help with issues/difficulties?
+                                                            How to contact the DiaGame members able to help with issues/difficulties?
                                                         </button>
                                                     </h5>
                                                 </div>
@@ -367,7 +529,7 @@
                 <!-- FOOTER -->
                 <div class="row">
                     <div class="col-md-12 footer">
-                        DiaGame Project page is powered by <a href="https://github.com/sunnyg1210/material-knowledge-base">material-knowledge-base</a>, a MIT Licensed Open-source project proudly hosted by <a href="github.com">Github</a>
+                        DiaGame Project page is based on <a href="https://github.com/sunnyg1210/material-knowledge-base">material-knowledge-base</a> template, a MIT Licensed Open-source project proudly hosted by <a href="github.com">Github</a>
                     </div>
                 </div>
             </div>
