Add "How to start the watch"

--- a/faqs.html
+++ b/faqs.html
@@ -292,7 +292,12 @@
                                                 <div id="sw-collapseFive" class="collapse" aria-labelledby="sw-headingFive" data-parent="#accordion">
                                                     <div class="card-body">
                                                         <div class="card-text">
-                                                            <p>TODO</p>
+                                                            <p>
+                                                                If the watch is turned off, you can turn it on again by pressing the <b>Home</b> for a few seconds. Then, just follow the steps already explained in:
+                                                            </p>
+                                                            <button class="btn btn-dark" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                                <a>What are the steps to follow when wearing the smartwatch daily?</a>
+                                                            </button>
                                                         </div>
                                                     </div>
                                                 </div>
