Add "How can I log food and physical activity"

--- a/faqs.html
+++ b/faqs.html
@@ -307,14 +307,131 @@
                                                     <h5 class="mb-0">
                                                         <span class="badge badge-pill badge-success">MijnEetMeter</span>
                                                         <button class="btn btn-dark collapsed" data-toggle="collapse" data-target="#em-collapseOne" aria-expanded="false" aria-controls="em-collapseOne">
-                                                            How can I log food and activity (with time stamps) in Eetmeter?
+                                                            How can I log food and physical activity (with time stamps) using MijnEetmeter?
                                                         </button>
                                                     </h5>
                                                 </div>
                                                 <div id="em-collapseOne" class="collapse" aria-labelledby="em-headingOne" data-parent="#accordion">
                                                     <div class="card-body">
                                                         <div class="card-text">
-                                                            <p>TODO</p>
+                                                            <p>
+                                                                Write down your daily diet and physical exertion in the MijnEetmeter app.
+                                                                <br>
+                                                                Under 'notes' you can write down the time when the meal (Breakfast, Lunch, Dinner, Snack) happened.
+                                                            </p>
+                                                        </div>
+                                                        <figure class="figure">
+                                                            <img src="assets/images/eetmeter/Picture1.png" class="img-fluid" style="width: 50%;">
+                                                            <figcaption class="figure-caption text-center">Startup and home screen.</figcaption>
+                                                        </figure>
+                                                        <div class="card-text">
+                                                            <p>
+                                                                Open the app on your smartphone, and log in with your study user data (if requested).
+                                                                <br>
+                                                                At the <b>Home</b> screen you can register your meal or physical activity:
+                                                            </p>
+                                                            <ol>
+                                                                <li>Register your meal.</li>
+                                                                <li>Register your physical activity.</li>
+                                                                <li>Fill in your profile, such as body weight and height.</li>
+                                                            </ol>
+                                                        </div>
+                                                        <div class="card-text">
+                                                            <p>
+                                                                The meal registration can be done as follows:
+                                                            </p>
+                                                            <figure class="figure">
+                                                                <img src="assets/images/eetmeter/Picture2.png" class="img-fluid" style="width: 75%;">
+                                                                <figcaption class="figure-caption text-center">Registering meals screen flow.</figcaption>
+                                                            </figure>
+                                                            <ol>
+                                                                <li>
+                                                                    <b>Start meal registration</b>
+                                                                    <br>
+                                                                    By clicking on the green 'plus' at the top right you start a new meal registration.
+                                                                </li>
+                                                                <li>
+                                                                    <b>Compose your meal (Breakfast, Lunch, Dinner, or Snack)</b>
+                                                                    <br>
+                                                                    Find all the ingredients of your meal.
+                                                                    You can also take a picture of the barcode of the packaging by clicking on the icon at the top right.
+                                                                </li>
+                                                                <li>
+                                                                    <b>Set meal information</b>
+                                                                    <br>
+                                                                    Select attributes, such as method of preparation, and select the unit (grams or number of spoons). Press 'next product' for the next ingredient.
+                                                                </li>
+                                                                <li>
+                                                                    <b>Overview of meal and registration time</b>
+                                                                    <br>
+                                                                    Here you can see the overview of your meal and the total number of carbohydrates.
+                                                                    <br>
+                                                                    Please, make sure to register the time you had the meal in the <b>Notes</b> section.
+                                                                    For that, we suggest a format like:
+                                                                    <br>
+                                                                    <br>
+                                                                    6:50 Breakfast
+                                                                    <br>
+                                                                    10:20 Snack (Apple)
+                                                                    <br>
+                                                                    13:15 Lunch
+                                                                    <br>
+                                                                    10:20 Snack (Cheese sandwich)
+                                                                    <br>
+                                                                    18:30 Dinner
+                                                                    <br>
+                                                                    <br>
+                                                                    <p>
+                                                                        <span class="material-icons">&#xe002;</span>
+                                                                        For each <i>Snack</i>, please make sure to put in parentheses the associated registered meal, as multiple ones can appear per day.
+                                                                    </p>
+                                                                </li>
+                                                            </ol>
+                                                        </div>
+                                                        <div class="card-text">
+                                                            <p>
+                                                                The physical activities can be registered as follows:
+                                                            </p>
+                                                            <figure class="figure">
+                                                                <img src="assets/images/eetmeter/Picture3.png" class="img-fluid" style="width: 75%;">
+                                                                <figcaption class="figure-caption text-center">Registering physical activity screen flow.</figcaption>
+                                                            </figure>
+                                                            <ol>
+                                                                <li>
+                                                                    <b>Start registering a physical activity</b>
+                                                                    <br>
+                                                                    Click on the green 'plus' at the top right you start a new registration.
+                                                                </li>
+                                                                <li>
+                                                                    <b>Select what effort you make</b>
+                                                                    <br>
+                                                                    Find in the list which activity suits you best.
+                                                                </li>
+                                                                <li>
+                                                                    <b>Duration</b>
+                                                                    <br>
+                                                                    For example, indicate how long you cycle (in minutes).
+                                                                </li>
+                                                                <li>
+                                                                    <b>Overview of your effort</b>
+                                                                    <br>
+                                                                    Here you can see the daily overview of the physical activity with an estimate of the number of kilocalories used.
+                                                                    <br>
+                                                                    Please, make sure to register the time of the activity in the <b>Notes</b> section.
+                                                                    For that, we suggest a format like:
+                                                                    <br>
+                                                                    <br>
+                                                                    7:30 Cycling (20 min)
+                                                                    <br>
+                                                                    18:00 Cycling (20 min)
+                                                                    <br>
+                                                                    <br>
+                                                                    <p>
+                                                                        <span class="material-icons">&#xe002;</span>
+                                                                        For each activity, please make sure to put in parentheses the associated registered time spent, as multiple ones can appear per day.
+                                                                    </p>
+                                                                </li>
+                                                            </ol>
                                                         </div>
                                                     </div>
                                                 </div>
